--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.7.3"
+    "@ember/render-modifiers": "^1.0.0",
+    "ember-ace": "^2.0.1",
+    "ember-animated": "^0.6.1",
+    "ember-auto-import": "^1.4.1",
+    "ember-cli-babel": "^7.7.3",
+    "ember-cli-htmlbars": "^3.0.1",
+    "ember-concurrency": "^1.0.0",
+    "leader-line": "^1.0.5",
+    "xstate": "^4.6.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.7.0",
@@ -29,7 +37,6 @@
     "ember-cli": "~3.10.1",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "^3.0.1",
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-sri": "^2.1.1",
@@ -43,6 +50,7 @@
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.10.0",
     "ember-source-channel-url": "^1.1.0",
+    "ember-statecharts": "^0.8.0",
     "ember-try": "^1.0.0",
     "eslint-plugin-ember": "^6.2.0",
     "eslint-plugin-node": "^9.0.1",
